Setup comunication modal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,11 @@
 -->    
     <div [ngClass]="{'wrapper': true}"> 
 
-        <ngx-smart-modal #modalMsgFromServer identifier="modalMsgFromServer" id="modalMsgFromServer">
+        <ngx-smart-modal [closable]="false" [escapable]="false" [dismissable]="false" #modalMsgFromServer identifier="modalMsgFromServer" id="modalMsgFromServer">
             <h3>Message From Server</h3>
             <hr>
             <p> This is a Message from server !!!</p>          
-            <button (click)="modalMsgFromServer.close()">Close</button>
+            <button (click)="modalMsgFromServer.close()" *ngIf="isFinish">Close</button>
         </ngx-smart-modal>
 
 
