QIX user custom property

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,9 +10,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="http://blog.creative-tim.com">
-                       Blog
-                    </a>
+                    
                 </li>
                 <li>
                     <a href="http://www.creative-tim.com/license">
@@ -22,7 +20,7 @@
             </ul>
         </nav>
         <div class="copyright pull-right">
-            &copy; <script>document.write(new Date().getFullYear())</script>, made with <i class="fa fa-heart heart"></i> by <a href="http://www.creative-tim.com">Creative Tim</a>
+            <a href="https://seal.beyondsecurity.com/vulnerability-scanner-verification/pbgame.expovin.it"><img src="https://seal.beyondsecurity.com/verification-images/pbgame.expovin.it/vulnerability-scanner-2.gif" alt="Website Security Test" border="0"></a>
         </div>
     </div>
 </footer>
