--- a/src/app/bam/bam.component.html
+++ b/src/app/bam/bam.component.html
@@ -1,1 +1,5 @@
-<h1>BAM</h1>
+<div class=" row">
+    <div class="col-lg-12 BAMBOX">
+            <iframe src='https://pbgqix.expovin.it/single/?appid=4efbe950-8e2d-4793-8a51-6f8ba3f95f1f&sheet=7f4b7dbd-837e-4515-a0c2-1a7f58201cd0&opt=ctxmenu&select=clearall'></iframe>
+    </div>
+</div>
