--- a/src/app/top/top.component.html
+++ b/src/app/top/top.component.html
@@ -1,1 +1,19 @@
-<h1>TOP</h1>
+<div class="main-panel">
+    <div class="content">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-8">
+                        <div class="card">
+                                <div class="header">
+                                    <h4 class="title">Market Trends</h4>
+                                    <p class="category">Sorted by Relevance</p>
+                                </div>
+                                <div class="content">
+                                    <div id="chartMarketTrends" class="ct-chart"></div>
+
+                                </div>
+                            </div>
+                </div>
+            </div>
+        </div>
+    </div>
