--- a/src/app/bam/bam.component.css
+++ b/src/app/bam/bam.component.css
@@ -1,14 +1,19 @@
 .BAMBOX {
     min-height:1000px;
     margin-top: 35px;
-    margin-left: 5px;
+    margin-left:285px;
     margin-right: 5px;
     margin-bottom: 5px;
     
 }
 
 iframe {
-    border:2px;
-    width:100%;
+    border:none;
+    width:85%;
     height:1000px;
+}
+
+.buttonController{
+    margin-bottom: 5px;
+    
 }
