--- a/src/app/top/top.component.html
+++ b/src/app/top/top.component.html
@@ -1,19 +1,22 @@
-<div class="main-panel">
-    <div class="content">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-8">
-                        <div class="card">
-                                <div class="header">
-                                    <h4 class="title">Market Trends</h4>
-                                    <p class="category">Sorted by Relevance</p>
-                                </div>
-                                <div class="content">
-                                    <div id="chartMarketTrends" class="ct-chart"></div>
-
-                                </div>
-                            </div>
+<div class=" row">
+        <div class="col-lg-12 BAMBOX">
+            <div class="row buttonController">
+                <div class="col-lg-2 .offset-md-2">
+                    <div class="btn-group" role="group" aria-label="...">
+                        <button type="button" class="btn btn-default" aria-label="Left Align">
+                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true" (click)="pagePrev();"></span>
+                        </button>     
+                        <button type="button" class="btn btn-default" aria-label="Left Align">
+                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true" (click)="pageNext();"></span>
+                        </button>                                 
+                    </div>
                 </div>
             </div>
+            <div class="row">
+                    <iframe [src]="iFrameUrl"></iframe>
+            </div>
+                
         </div>
     </div>
+    
+    
